# RoboScribe

./: .gitignore  README.md  RoboScribe.py  main.py
GUI/: Robosrcibe_GUI.py
Software/: README.md  RoboScribe.py
docs/: Doxyfile  DoxygenLayout.xml  doxygen_groups.h
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/drivers/: CMakeLists.txt  robot_data.h
firmware/drivers/MPU6050/: CMakeLists.txt  MPU6050.c  MPU6050.h
firmware/drivers/MPU6050/test/: CMakeLists.txt
firmware/drivers/MPU6050/test/main/: main.c
firmware/drivers/SDcard/: CMakeLists.txt  Kconfig.projbuild  SDcard.c  SDcard.h
firmware/drivers/SDcard/test/: CMakeLists.txt  main.c
firmware/drivers/SDcard/test/main/: main.c
firmware/drivers/servo/: CMakeLists.txt  servo.c  servo.h
firmware/drivers/servo/test/: CMakeLists.txt
firmware/drivers/servo/test/main/: main.c
firmware/drivers/stepperMotors/: CMakeLists.txt  stepper.c  stepper.h  stepperMotorEncoder.c  stepperMotorEncoder.h
firmware/drivers/stepperMotors/test/: CMakeLists.txt
firmware/drivers/stepperMotors/test/main/: main.c
firmware/drivers/wifiComms/: CMakeLists.txt  file_server.c  file_server.h
firmware/drivers/wifiComms/test/: CMakeLists.txt
firmware/drivers/wifiComms/test/main/: CMakeLists.txt  main.c
firmware/drivers/wifiComms/test/python_interface/: interface.py
firmware/drivers/wireless_communication/: CMakeLists.txt  wireless_communication.c  wireless_communication.h
firmware/drivers/wireless_communication/test/: CMakeLists.txt  main.c
firmware/drivers/wireless_communication/test/main/: main.c
(+53 files in other folders)
